change database schema to add file
Add "File" table and tie them to "Object", "Room" and "Map" tables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "./mariadb.env"
     volumes:
       - mariadb-volume:/var/lib/mysql:rw
-      - ./database/mariadb.sql:/docker-entrypoint-initdb.d/mariadb.sql:ro
+      - ./database/mariadb.sql:/docker-entrypoint-initdb.d/01_mariadb.sql:ro
     networks:
       - mariadb-network
 
