add mariadb connexion info

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - ./database/dummy_mariadb.sql:/docker-entrypoint-initdb.d/02_dummy_mariadb.sql:ro
     networks:
       - mariadb-network
+    hostname: mariadb-database
 
   adminer:
     image: adminer:latest
