--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,9 @@ services:
     networks:
       - mariadb-network
 
+  phpmyadmin:
+    image: imageName
+
 networks:
   mariadb-network:
     driver: bridge
