ajout swagger editor dans le docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
   adminer:
     image: adminer:latest
     restart: always
+    container_name: adminer
     ports:
       - "9980:8080"
     networks:
@@ -28,6 +29,7 @@ services:
   phpmyadmin:
     image: phpmyadmin
     restart: always
+    container_name: phpmyadmin
     environment:
       - PMA_HOST=mariadb-database
     depends_on:
@@ -36,6 +38,13 @@ services:
       - mariadb-network
     ports:
       - 9880:80
+
+  swagger-editor:
+    image: swaggerapi/swagger-editor
+    container_name: swagger-editor
+    restart: always
+    ports:
+      - 8880:8080
 
 networks:
   mariadb-network:
