--- a/api.yaml
+++ b/api.yaml
@@ -102,7 +102,18 @@ paths:
       description: Récupère toutes les cartes et leurs informations
       responses:
         '200':
-          $ref: '#/components/responses/MapSucces'
+          description: Une map à été créé, modifié ou récupéré
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    $ref: '#/components/schemas/Status'
+                  content:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/WholeMap'
     post:
       tags:
         - map
@@ -127,6 +138,7 @@ components:
     
     uuid:
       type: string
+      example: 78a7eb29967311edaa340242ac1b0003
     
     Uuid:
       type: object
@@ -196,10 +208,13 @@ components:
       properties:
         name:
           type: string
+          example: Arrosoir
         description:
           type: string
+          example: permet d'arroser
         isTool:
           type: integer
+          example: 1
     Door:
       type: object
       properties:
@@ -244,43 +259,35 @@ components:
       allOf:
         - $ref: '#/components/schemas/Door'
         - $ref: '#/components/schemas/Uuid'
-    WholeDay:
+    WholeMap:
       allOf:
-        - $ref: '#/components/schemas/DayUuid'
+        - $ref: '#/components/schemas/MapUuid'
         - type: object
           properties:
-            maps:
+            places:
               type: array
               items:
                 allOf:
-                  - $ref: '#/components/schemas/MapUuid'
+                  - $ref: '#/components/schemas/PlaceUuid'
                   - type: object
                     properties:
-                      places:
+                      rooms:
                         type: array
                         items:
                           allOf:
-                            - $ref: '#/components/schemas/PlaceUuid'
-                            - type: object
+                           - $ref: '#/components/schemas/RoomUuid'
+                           -  type: object
                               properties:
-                                rooms:
+                                objects:
                                   type: array
                                   items:
                                     allOf:
-                                     - $ref: '#/components/schemas/RoomUuid'
-                                     -  type: object
-                                        properties:
-                                          objects:
-                                            type: array
-                                            items:
-                                              allOf:
-                                                - $ref: '#/components/schemas/ObjectUuid'
-                                              
-                                          doors:
-                                            type: array
-                                            items:
-                                              allOf:
-                                                - $ref: '#/components/schemas/DoorUuid'
+                                      - $ref: '#/components/schemas/ObjectUuid'
+                                doors:
+                                  type: array
+                                  items:
+                                   allOf:
+                                    - $ref: '#/components/schemas/DoorUuid'
           
         
     
@@ -325,7 +332,7 @@ components:
               content:
                 type: array
                 items:
-                  $ref: '#/components/schemas/WholeDay'
+                  $ref: '#/components/schemas/MapUuid'
   requestBodies:
     RoomBody:
       required: true
