--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,16 @@ services:
     restart: always
     ports:
       - 8880:8080
+  swagger-ui:
+    image: swaggerapi/swagger-ui
+    container_name: swagger-ui
+    environment:
+      - API_URL=swagger.yaml
+    volumes:
+      - ./api.yaml:/usr/share/nginx/html/swagger.yaml
+    restart: always
+    ports:
+      - 8881:8080
 
 networks:
   mariadb-network:
