feat: integrate back get place into days front and install axios

--- a/frontend/phaser/package.json
+++ b/frontend/phaser/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "axios": "^1.2.6",
         "phaser": "^3.55.2",
         "phaser3-rex-plugins": "^1.1.81"
     },
