--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon  index.js localhost 8080",
     "run": "node index.js"
   },
@@ -18,6 +18,11 @@
     "mariadb": "^3.0.1"
   },
   "devDependencies": {
+    "jest": "^29.4.2",
     "nodemon": "^2.0.20"
+  },
+  "jest": {
+    "moduleFileExtensions": ["mjs", "js"],
+    "transform": {}
   }
 }
