--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,10 +10,8 @@ services:
     volumes:
       - mariadb-volume:/var/lib/mysql:rw
       - ./database/mariadb.sql:/docker-entrypoint-initdb.d/01_mariadb.sql:ro
-      - ./database/dummy_mariadb.sql:/docker-entrypoint-initdb.d/03_dummy.sql:ro
-      - ./database/dummy_file.sql:/docker-entrypoint-initdb.d/02_file.sql:ro
-    env_file:
-      - ./.env
+      - ./database/dummy_mariadb.sql:/docker-entrypoint-initdb.d/02_dummy.sql:ro
+      - ./database/dummy_file.sql:/docker-entrypoint-initdb.d/03_dummy.sql:ro
     networks:
       - mariadb-network
     hostname: mariadb-database
