add image file to sql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - mariadb-volume:/var/lib/mysql:rw
       - ./database/mariadb.sql:/docker-entrypoint-initdb.d/01_mariadb.sql:ro
       - ./database/dummy_mariadb.sql:/docker-entrypoint-initdb.d/02_dummy.sql:ro
+      - ./database/dummy_file.sql:/docker-entrypoint-initdb.d/03_dummy.sql:ro
     networks:
       - mariadb-network
     hostname: mariadb-database
