tmp: change max database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,9 @@ services:
       - "./mariadb.env"
     volumes:
       - mariadb-volume:/var/lib/mysql:rw
-      - ./database/mariadb.sql:/docker-entrypoint-initdb.d/01_mariadb.sql:ro
-      - ./database/dummy_mariadb.sql:/docker-entrypoint-initdb.d/02_dummy.sql:ro
+      #- ./database/mariadb.sql:/docker-entrypoint-initdb.d/01_mariadb.sql:ro
+      #- ./database/dummy_mariadb.sql:/docker-entrypoint-initdb.d/02_dummy.sql:ro
+      - ./database/dump_alive.sql:/docker-entrypoint-initdb.d/03_alive.sql:ro
     networks:
       - mariadb-network
     hostname: mariadb-database
