--- a/backend/database/docker-compose.yml
+++ b/backend/database/docker-compose.yml
@@ -9,9 +9,11 @@ services:
       - "3306:3306"
     volumes:
       - mariadb-volume:/var/lib/mysql:rw
-      - ./database/mariadb.sql:/docker-entrypoint-initdb.d/01_mariadb.sql:ro
-      - ./database/dummy_mariadb.sql:/docker-entrypoint-initdb.d/02_dummy.sql:ro
-      - ./database/dummy_file.sql:/docker-entrypoint-initdb.d/03_dummy.sql:ro
+      - ./mariadb.sql:/docker-entrypoint-initdb.d/01_mariadb.sql:ro
+      - ./dummy_mariadb.sql:/docker-entrypoint-initdb.d/03_dummy.sql:ro
+      - ./dummy_file.sql:/docker-entrypoint-initdb.d/02_file.sql:ro
+    env_file:
+      - ../.env
     networks:
       - mariadb-network
     hostname: mariadb-database
@@ -28,18 +30,7 @@ services:
       - mariadb-network
     ports:
       - 9880:80
-  backend:
-    image: xosh/alive-backend
-    restart: always
-    container_name: alive-backend
-    depends_on:
-      - database
-    env_file:
-      - ./.env
-    networks:
-      - mariadb-network
-    ports:
-      - 8080:8080
+
 networks:
   mariadb-network:
 
