--- a/frontend/phaser/Dockerfile
+++ b/frontend/phaser/Dockerfile
@@ -1,13 +1,13 @@
 FROM nginx:stable-alpine
 
-WORKDIR /tmp/app
+WORKDIR /usr/local/app
+RUN apk add --update --no-cache nodejs npm
 COPY package.json package.json
-COPY alive.nginx.conf /etc/nginx/conf.d/alive.conf
-RUN apk add --no-cache --update npm
-COPY . .
 RUN npm install
+COPY . .
 RUN npm run build
-WORKDIR /var/www/alive
-RUN mv -v /tmp/app/build/* .
-RUN rm -rf /tmp/app
-RUN apk del npm
+RUN mv build ..
+RUN rm -rf *
+RUN mv ../build .
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+RUN apk del nodejs npm
