--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -16,7 +16,8 @@ services:
       - mariadb-network
     hostname: mariadb-database
   backend:
-    image: xosh/alive-backend
+    build: .
+    image: alive-backend
     restart: always
     container_name: alive-backend
     depends_on:
