--- a/backend/docker-compose.dev.yml
+++ b/backend/docker-compose.dev.yml
@@ -9,9 +9,7 @@ services:
       - "3306:3306"
     volumes:
       - mariadb-volume:/var/lib/mysql:rw
-      - ./database/mariadb.sql:/docker-entrypoint-initdb.d/01_mariadb.sql:ro
-      - ./database/dummy_mariadb.sql:/docker-entrypoint-initdb.d/03_dummy.sql:ro
-      - ./database/dummy_file.sql:/docker-entrypoint-initdb.d/02_file.sql:ro
+      - ./database/alive.sql:/docker-entrypoint-initdb.d/01_alive.sql:ro
     env_file:
       - ./.env
     networks:
