--- a/frontend/phaser/nginx.conf
+++ b/frontend/phaser/nginx.conf
@@ -6,4 +6,9 @@ server {
      root        /usr/local/app/build;
      access_log  /var/log/nginx/access.log;
      error_log   /var/log/nginx/error.log;
+     #location /api {
+     #   proxy_set_header Host $host;
+     #   proxy_set_header X-Real-IP $remote_addr;
+     #   proxy_pass http://alive-backend:8080/api;
+     #}
 }
