--- a/backend/example.env
+++ b/backend/example.env
@@ -3,6 +3,6 @@ MYSQL_ROOT_HOST=%
 MYSQL_USER=alive
 MYSQL_PASSWORD=CHANGE_ME
 MYSQL_DATABASE=alive
-MYSQL_HOST=database
+MYSQL_HOST=mariadb-database
 DEV=1
 
