--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
     restart: always
     container_name: alive-frontend
     hostname: alive-frontend
+    environment:
+      - NGINX_PORT=80
     depends_on:
       - backend
     networks:
