--- a/frontend/phaser/nginx.conf.template
+++ b/frontend/phaser/nginx.conf.template
@@ -11,4 +11,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_pass http://alive-backend:8080/api;
      }
+
+     location /phpmyadmin {
+        return 301 /phpmyadmin/;
+     }
+     location /phpmyadmin/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_pass http://alive-phpmyadmin:80/;
+        
+     }
 }
