--- a/frontend/phaser/Dockerfile
+++ b/frontend/phaser/Dockerfile
@@ -3,6 +3,7 @@ FROM nginx:stable-alpine
 WORKDIR /usr/local/app
 RUN apk add --update --no-cache nodejs npm
 COPY package.json package.json
+RUN npm i -g npm
 RUN npm install
 COPY . .
 RUN npm run build
